err/model-cache.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cached_property-1.3.1.dist-info'...
Listing './lib/python3.5/site-packages/etl_utils'...
Compiling './lib/python3.5/site-packages/etl_utils/buffer_logger.py'...
***   File "./lib/python3.5/site-packages/etl_utils/buffer_logger.py", line 36
    print StringUtils.merge(*strs)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/etl_utils/console_utils.py'...
***   File "./lib/python3.5/site-packages/etl_utils/console_utils.py", line 6
    print text
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/etl_utils/items_group_and_indexes.py'...
***   File "./lib/python3.5/site-packages/etl_utils/items_group_and_indexes.py", line 54
    print ', '.join([str(i1) for i1 in l1])
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/etl_utils/itertools_utils.py'...
***   File "./lib/python3.5/site-packages/etl_utils/itertools_utils.py", line 19
    print "[split_seqs_by_size]", seqs1, size1
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/etl_utils/list_utils.py'...
***   File "./lib/python3.5/site-packages/etl_utils/list_utils.py", line 23
    print c1[0].ljust(max_len, ' '), ' : ', c1[1]
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/etl_utils/speed.py'...
***   File "./lib/python3.5/site-packages/etl_utils/speed.py", line 21
    print "当前还没有计数"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/etl_utils-0.1.11.egg-info'...
Listing './lib/python3.5/site-packages/forwardable.py-0.0.11.egg-info'...
Listing './lib/python3.5/site-packages/humanize'...
Listing './lib/python3.5/site-packages/humanize/locale'...
Listing './lib/python3.5/site-packages/humanize/locale/fr_FR'...
Listing './lib/python3.5/site-packages/humanize/locale/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize/locale/ko_KR'...
Listing './lib/python3.5/site-packages/humanize/locale/ko_KR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize/locale/ru_RU'...
Listing './lib/python3.5/site-packages/humanize/locale/ru_RU/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/model_cache'...
Compiling './lib/python3.5/site-packages/model_cache/model_cache_class.py'...
***   File "./lib/python3.5/site-packages/model_cache/model_cache_class.py", line 52
    print "[ModelCache] %s at %s" % (msg, cls.dbpath or '[memory]')
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/model_cache/storage'...
Listing './lib/python3.5/site-packages/model_cache/tests'...
Listing './lib/python3.5/site-packages/model_cache/tools'...
Compiling './lib/python3.5/site-packages/model_cache/tools/parallel.py'...
***   File "./lib/python3.5/site-packages/model_cache/tools/parallel.py", line 281
    print "Maybe IO error happened ..."
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/model_cache-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/progressbar-2.2.egg-info'...
Listing './lib/python3.5/site-packages/pysingleton-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/redis_collections'...
Listing './lib/python3.5/site-packages/redis_collections-0.4.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/singleton'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlitedict-1.5.0.egg-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
